Add initial splash page html

--- a/VendorOrder/Views/Home/Index.cshtml
+++ b/VendorOrder/Views/Home/Index.cshtml
@@ -10,6 +10,9 @@
       crossorigin="anonymous">
   </head>
   <body>
+    <h1 id='title'>Pierre's Vendor and Order Tracker></h1>
 
+    <a href="">Click here to create a vendor</a>
+    <a href="">Click here to create an order</a>
   </body>
 </html>
