Add ability to create list of vendors

--- a/VendorOrder/Views/Home/Index.cshtml
+++ b/VendorOrder/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
   <body>
     <h1 id='title'>Pierre's Vendor and Order Tracker</h1>
 
-    <a href="/vendors">Click here to create a vendor</a>
+    <a href="/vendors/new">Click here to create a vendor</a>
 
   </body>
 </html>
